<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomEmpresa"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:textSize="25dp"
            android:textColor="@color/purple_500">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:textSize="20dp"
            android:textColor="@color/black">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/numBoleto"
            android:textSize="16dp">
        </TextView>

        <EditText
            android:id="@+id/txtNumBoleto"
            android:hint="@string/soliBoleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomCliente"
            android:textSize="16dp">
        </TextView>

        <EditText
            android:id="@+id/txtNombreCliente"
            android:hint="@string/soliNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edadCliente"
            android:textSize="16dp">
        </TextView>

        <EditText
            android:id="@+id/txtEdadCliente"
            android:hint="@string/soliEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:textSize="16dp">
        </TextView>

        <EditText
            android:id="@+id/txtFecha"
            android:hint="@string/soliFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp">
        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destino"
            android:textSize="16dp">
        </TextView>

        <Spinner
            android:id="@+id/spnDestinos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecBoleto"
            android:textSize="16dp">
        </TextView>

        <Spinner
            android:id="@+id/spnTipoBoleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/precio"
            android:textSize="16dp">
        </TextView>

        <EditText
            android:id="@+id/txtPrecio"
            android:hint="@string/soliPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp">
        </EditText>

        <Button
            android:id="@+id/btnImprimir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/Imprimir">
        </Button>

        <Button
            android:id="@+id/btnVaciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Vaciar">
        </Button>

        <TextView
            android:id="@+id/lblResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp">
        </TextView>

    </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>